@@ -98,7 +98,6 @@ def _handleScanArgs(args, kwargs, scaninfo):
             else:
                 move.append((session.devices[key], value))
         else:
-            # XXX this silently accepts wrong keys; restrict the possible keys?
             preset[key] = value
     return preset, scaninfo, detlist, envlist, move, multistep
 
